--- a/src/main/resources/locale/en.properties
+++ b/src/main/resources/locale/en.properties
@@ -234,3 +234,5 @@ member-added=The member **%s** has been added to the group **%s**.
 member-removed=The member **%s** has been removed from the group **%s**.
 no-group=That doesn't appear to be an existing group, it will be automatically created if you add a permission to it by using **.mayapermission group add <group> <permission>**.
 inactive-disconnected=I left the voice channel because nobody is listening anymore.\nLike using me? Consider supporting my development and maintenance by becoming a premium user at https://mayawinterfox.com/premium
+welcome-message=The current welcome message is; %s
+welcome-help=**.mayawelcome set <message>**\nSet the welcome message, markup is supported.
