big command logic

--- a/src/main/resources/locale/en.properties
+++ b/src/main/resources/locale/en.properties
@@ -246,3 +246,6 @@ welcome-toggle-help=**.mayawelcome toggle**\nToggle welcome messages enabled.
 welcome-embed-help=**.mayawelcome embed**\nToggle welcome messages in an embed.
 embed-enabled=Welcome messages in embeds are now **enabled**.
 embed-disabled=Welcome messages in embeds are now **disabled**.
+bot-missing-permissions=I cannot execute the command because I am missing the following permissions\n\n**%s**
+member-missing-permissions=You cannot execute that command because you are missing the following permissions\n\n**%s**
+missing-permissions=Missing Permissions!
